--- a/menu-pizzamigo-english/web/bebidas.html
+++ b/menu-pizzamigo-english/web/bebidas.html
@@ -62,17 +62,19 @@
           <p>COKE 1L.</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="coca1l"></span>        </div>
+          <span class="text-black text-center pp p-5" id="coca1l"></span>
+        </div>
       </div>
 
-      
+
 
       <div class="row">
         <div class="col-6 mt-5">
           <p>FANTA 1L.</p>
         </div>
         <div class="col-6 mt-5">
-<span class="text-black text-center pp p-5" id="fanta1l"></span>        </div>
+          <span class="text-black text-center pp p-5" id="fanta1l"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -80,7 +82,8 @@
           <p> SPRITE 1L.</p>
         </div>
         <div class="col-6 mt-5">
-<span class="text-black text-center pp p-5" id="sprite1l"></span>        </div>
+          <span class="text-black text-center pp p-5" id="sprite1l"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -88,23 +91,18 @@
           <p>COKE 1,5L.</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="coca15l"></span>        </div>
-      </div>
-<!-- 
-      <div class="row">
-        <div class="col-6 mt-5">
-          <p>COKE 300 cc.</p>
+          <span class="text-black text-center pp p-5" id="coca15l"></span>
         </div>
-        <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="coca300"></span>        </div>
-      </div> -->
+      </div>
+ 
 
       <div class="row">
         <div class="col-6 mt-5">
           <p>FANTA 1.5L.</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="fanta300"></span>        </div>
+          <span class="text-black text-center pp p-5" id="fanta15l"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -112,15 +110,42 @@
           <p>SPRITE 1.5L.</p>
         </div>
         <div class="col-6 mt-5">
+          <span class="text-black text-center pp p-5" id="sprite15l"></span>
+        </div>
+      </div>
+    
+      <div class="row">
+        <div class="col-6 mt-5">
+          <p>COKE 350 cc.</p>
+        </div>
+        <div class="col-6 mt-5">
+          <span class="text-black text-center pp p-5" id="coca300"></span>        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6 mt-5">
+          <p>FANTA 350 cc.</p>
+        </div>
+        <div class="col-6 mt-5">
+          <span class="text-black text-center pp p-5" id="fanta300"></span>        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-6 mt-5">
+          <p>SPRITE 350 cc.</p>
+        </div>
+        <div class="col-6 mt-5">
           <span class="text-black text-center pp p-5" id="sprite300"></span>        </div>
       </div>
+
 
       <div class="row">
         <div class="col-6 mt-5">
           <p>FLAVORED WATER 500 cc.</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="aguasav"></span>        </div>
+          <span class="text-black text-center pp p-5" id="aguasav"></span>
+        </div>
       </div>
 
       <!-- CERVEZA -->
@@ -135,7 +160,8 @@
           <p>LAGER SALTA</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="saltarubia"></span>        </div>
+          <span class="text-black text-center pp p-5" id="saltarubia"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -143,7 +169,8 @@
           <p>BLACK SALTA</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="saltanegra"></span>        </div>
+          <span class="text-black text-center pp p-5" id="saltanegra"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -151,7 +178,8 @@
           <p>HEINEKEN</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="heineken"></span>        </div>
+          <span class="text-black text-center pp p-5" id="heineken"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -159,7 +187,8 @@
           <p>IMPERIAL</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="imperial"></span>        </div>
+          <span class="text-black text-center pp p-5" id="imperial"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -167,7 +196,8 @@
           <p>MILLER</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="miller"></span>        </div>
+          <span class="text-black text-center pp p-5" id="miller"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -175,7 +205,8 @@
           <p>CORONA 710cc</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="corona710"></span>        </div>
+          <span class="text-black text-center pp p-5" id="corona710"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -183,7 +214,8 @@
           <p>CORONA 330cc</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="corona330"></span>        </div>
+          <span class="text-black text-center pp p-5" id="corona330"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -191,7 +223,8 @@
           <p>BEER SOL 330cc</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="sol"></span>        </div>
+          <span class="text-black text-center pp p-5" id="sol"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -199,7 +232,8 @@
           <p>CANNED BEER</p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="lata"></span>        </div>
+          <span class="text-black text-center pp p-5" id="lata"></span>
+        </div>
       </div>
 
       <div class="row">
@@ -208,7 +242,8 @@
           </p>
         </div>
         <div class="col-6 mt-5">
-          <span class="text-black text-center pp p-5" id="laton"></span>        </div>
+          <span class="text-black text-center pp p-5" id="laton"></span>
+        </div>
       </div>
 
 
