--- a/menu-pizzamigo/web/desayuno.html
+++ b/menu-pizzamigo/web/desayuno.html
@@ -131,6 +131,8 @@
         </div>
 
 
+
+
         <div class="row mt-5">
           <div class="col-5 align-self-center">
             <span class="text-black text-center pp p-5" id="comboAmericano"></span>
@@ -142,6 +144,36 @@
           </div>
         </div>
 
+
+        <div class="row mt-5">
+          <!-- precio licuados  -->
+          <div class="col-6 text-center marco p-3" style="font-size: 1.3rem;">PROMO LICUADO 1L + 1 TOSTADO</div>
+          <div class="col-6 mt-5">
+            <span class="text-black text-center pp p-5" id="plicuados"></span>
+
+            <!-- <img class="precio" src="../2100.png" alt="2100" srcset=""> -->
+          </div>
+        </div>
+
+        <div class="row mt-5">
+          <!-- precio licuados  -->
+          <div class="col-6 mt-5">
+            <span class="text-black text-center pp p-5" id="pnaranja"></span>
+            
+            <!-- <img class="precio" src="../2100.png" alt="2100" srcset=""> -->
+          </div>
+          <div class="col-6 text-center marco p-3" style="font-size: 1.3rem;">JUGO DE NARANJA 1L + 1 TOSTADO</div>
+        </div>
+
+        <div class="row mt-5">
+          <!-- precio licuados  -->
+          <div class="col-6 text-center marco p-3" style="font-size: 1.3rem;">LIMONADA 1L + 1 TOSTADO</div>
+          <div class="col-6 mt-5">
+            <span class="text-black text-center pp p-5" id="plimonada"></span>
+
+            <!-- <img class="precio" src="../2100.png" alt="2100" srcset=""> -->
+          </div>
+        </div>
         <!-- infusiones -->
 
         <div class="row mt-5">
@@ -194,6 +226,20 @@
           </div>
           <div class="col-6 mt-5">
             <span class="text-black text-center pp p-5" id="jugogrande"></span>
+            <!-- precio -->
+          </div>
+          <div class="col-6 mt-5">
+            <p>JUGO DE NARANJA 1L</p>
+          </div>
+          <div class="col-6 mt-5">
+            <span class="text-black text-center pp p-5" id="naranja"></span>
+            <!-- precio -->
+          </div>
+          <div class="col-6 mt-5">
+            <p>LIMONADA 1L</p>
+          </div>
+          <div class="col-6 mt-5">
+            <span class="text-black text-center pp p-5" id="limonada"></span>
             <!-- precio -->
           </div>
           <div class="col-6 mt-5">
