--- a/menu-pizzamigo/web/plato.html
+++ b/menu-pizzamigo/web/plato.html
@@ -189,6 +189,16 @@
       </div>
         <!-- Fin tabla -->
 
+        <div class="col-12 mt-5">
+          <h2 class="marco text-center">Menú Infantil</h2>
+        </div>
+        <div class="col-6">
+          <p>Patitas de pollo con fritas o fideos</p>
+        </div>
+        <div class="col-6">
+          <span class="text-black text-center pp p-5" id="menuchicos"></span>
+        </div>
+
       <div class="col-12 mt-5">
         <h2 class="marco  text-center">GUARNICIÓN C/U <span id="guarnicion"></span></h2>
       </div>
